--- a/styles.css
+++ b/styles.css
@@ -336,26 +336,28 @@ padding-left: 20%;
     padding: 3rem 2rem;
     border-radius: .5rem;
     display: none;
-    width: 43rem;
+    width: 35rem;
 }
 
 .food-preview-container .food-preview.active {
     display: inline-block;
+    animation: fadeIn 0.7s cubic-bezier(0.54, 1.3, 0.63, 1.34) backwards;
+
 }
 
 .food-preview-container .food-preview img {
-    height: 25rem;
-    margin-bottom: 1rem;
+    height: 15rem;
+    margin-bottom: .2rem;
 }
 
 .food-preview-container .food-preview h3 {
-    padding: 1rem 0;
+    padding: .2rem 0;
     font-size: 2.5rem;
     color: var(--black);
 }
 
 .food-preview-container .food-preview .stars {
-    margin-top: .5rem;
+    margin-top: .2rem;
 }
 
 .food-preview-container .food-preview .stars i {
@@ -367,7 +369,7 @@ padding-left: 20%;
 .food-preview-container .food-preview p {
     font-size: 1.6rem;
     color: var(--light-black);
-    padding: 1rem 0;
+    padding: .2rem 0;
     line-height: 2;
 }
 
@@ -381,7 +383,7 @@ padding-left: 20%;
     position: absolute;
     top: 1.5rem; 
     right: 2.5rem;
-    font-size: 5.5rem;
+    font-size: 3.5rem;
     cursor: pointer;
     color: var(--white);
 }
@@ -392,14 +394,110 @@ padding-left: 20%;
 
 
 
+.gallery .gallery-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 2.5rem;
+}
+
+.gallery .gallery-container .box {
+    height: 40rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.gallery .gallery-container .box img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+
+.gallery .gallery-container .box .icon {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 100%;
+    width: 100%;
+    background: var(--dark-bg);
+}
+
+
+.gallery .gallery-container .box .icon i {
+    font-size: 4rem;
+    color: var(--white);
+}
+
+.gallery .gallery-container .box:hover .icon {
+    display: flex;
+}
 
 
 
 
+.menu {
+    background: var(--light-bg);   
+    padding-bottom: 4rem;
+}
 
 
+.menu .slide .title {
+    padding: 1rem;
+    font-size: 3rem;
+    color: var(--white);
+    background: var(--peru);
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.menu .slide .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding-bottom: 4rem;
+}
+
+.menu .slide .box-container .box {
+    flex: 1 1 35rem;
+    background: var(--white);
+    padding: 2rem;
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: space-between;
+
+}
 
 
+.menu .slide .box-container .box h3 {
+    font-size: 2.5rem;
+    color: var(--black);
+    padding-bottom: 1rem;
+}
+
+.menu .slide .box-container .box p{
+    font-size: 1.6rem;
+    color: var(--light-black);
+    line-height: 2;
+}
+
+
+.menu .slide .box-container .box .price {
+    font-size: 2.5rem;
+    color: var(--peru);
+}
+
+.menu .slide .box-container .box:hover {
+    transform: scale(.9);
+    cursor: pointer;
+}
 
 
 
@@ -476,6 +574,12 @@ padding-left: 20%;
         top: initial;
         bottom: 1rem;
     }
+
+    .menu .slide .box-container .box {
+        flex-flow: column;
+        text-align: center;
+    }
+
 }
 
 
