--- a/styles.css
+++ b/styles.css
@@ -500,13 +500,44 @@ padding-left: 20%;
 }
 
 
+.order {
+    background: var(--peru);
+}
+
+.order .heading span {
+    color: var(--white);
+}
+
+.order .heading h3 {
+    color: var(--white);
+}
 
 
+.order form{
+    padding: 2rem;
+    background: var(--white);
+}
 
+.order .form .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
 
+.order form .box-container .box {
+    flex: 1 1 65rem;
+}
 
-
-
+.order form .box-container .box .inputBox input,
+.order form .box-container .box .inputBox textarea {
+    width: 100%;
+    margin: 1rem 0;
+    padding: 1.2rem;
+    font-size: 1.7rem;
+    color: var(--light-black);
+    border: var(--border);
+    text-transform: none;
+}
 
 
 
