--- a/styles.css
+++ b/styles.css
@@ -516,34 +516,219 @@ padding-left: 20%;
 .order form{
     padding: 2rem;
     background: var(--white);
+    box-shadow: var(--box-shadow);
 }
 
-.order .form .box-container {
+.order form .box-container {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
 }
 
 .order form .box-container .box {
-    flex: 1 1 65rem;
+    flex: 1 1 30rem;
 }
+
 
 .order form .box-container .box .inputBox input,
 .order form .box-container .box .inputBox textarea {
     width: 100%;
     margin: 1rem 0;
-    padding: 1.2rem;
+    padding: 1.2rem 1.4rem;
     font-size: 1.7rem;
     color: var(--light-black);
     border: var(--border);
     text-transform: none;
 }
 
+.order form .box-container .box .inputBox input::placeholder,
+.order form .box-container .box .inputBox textarea::placeholder{
+    text-transform: capitalize;
+}
+
+.order form .box-container .box .inputBox input:focus,
+.order form .box-container .box .inputBox textarea:focus {
+    background: var(--black);
+    color: var(--white);
+}
+
+.order form .box-container .box .inputBox input:focus::placeholder,
+.order form .box-container .box .inputBox textarea:focus::placeholder {
+    color: var(--white);
+}
+
+.order form .box-container .box .inputBox textarea {
+    height: 20rem;
+    resize: none;
+}
+
+.order form .box-container .box .inputBox .map {
+    height: 20rem;
+    width: 100%;
+    margin: 1rem 0;
+    padding: .5rem 0;
+}
+
+.order form .box-container .box .inputBox .map span {
+    color: var(--light-black);
+    font-size: 2rem;
+}
+
+.blogs {
+    background: var(--light-bg);
+}
+
+.blogs .slide .image {
+    height: 25rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.blogs .slide img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.blogs .slide .image span {
+    position: absolute;
+    bottom: -10rem;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: .5rem 1.5rem;
+    font-size: 2rem;
+    color: var(--white);
+    background: var(--black);
+    z-index: 10;
+}
+
+.blogs .slide:hover .image span {
+    bottom: 1rem;
+}
+
+.blogs .slide:hover .image img {
+    transform: scale(1.1);
+}
+
+.blogs .slide .content {
+    padding: 2rem;
+    background: var(--white);
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    margin-bottom: 4rem;
+}
+
+.blogs .slide .content .icon {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 2rem;
+}
+
+.blogs .slide  .content .icon a {
+    font-size: 1.5rem;
+    color: var(--light-black);
+}
+
+.blogs .slide .content .icon a i {
+    padding-right: .7rem;
+    color: var(--peru);
+}
+
+.blogs .slide .content .icon a:hover {
+    color: var(--peru);
+}
+
+.blogs .slide .content .title {
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.blogs .slide .content .title:hover {
+    text-decoration: underline;
+}
+
+.blogs .slide .content p {
+    padding: 1rem 0;
+    line-height: 2;
+    font-size: 1.6rem;
+    color: var(--light-black);
+}
 
 
+.footer {
+    text-align: center;
+}
 
+.footer .icons-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    gap: 2rem;
+}
 
+.footer .icons-container .icons {
+    text-align: center;
+    padding: 3rem 2rem;
+}
 
+.footer .icons-container .icons i {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    background: var(--peru);
+    color: var(--white);
+    margin-bottom: 1rem;
+    line-height: 5.8rem;
+    font-size: 2.5rem;
+}
+
+.footer .icons-container .icons h3{
+    font-size: 2rem;
+    color: var(--light-black);
+    padding: 1rem 0;
+}
+
+.footer .icons-container .icons p {
+    line-height: 1.5rem;
+    font-size: 1.55rem;
+    color: var(--light-black);
+    text-transform: none;
+}
+
+.footer .share {
+    margin: 2rem 0;
+}
+
+.footer .share a {
+    height: 7rem;
+    width: 7rem;
+    line-height: 6rem;
+    color: var(--white);
+    background: var(--black);
+    margin: .3rem;
+    font-size: 3rem;
+}
+
+.footer .share a:hover {
+    background: var(--peru);
+}
+
+.footer .credit {
+    padding-top: 2rem;
+    margin-top: 3rem;
+    border-top: var(--border);
+    font-size: 2rem;
+    color: var(--light-black);
+}
+
+.footer .credit span {
+    color: var(--peru);
+}
+
+.footer .powered {
+    font-size: 1.5rem;
+    color: var(--black);
+}
 
 
 
