--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,13 @@ section {
 }
 
 .header {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-shadow: var(--box-shadow);
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
