Center the ratings images on the large screen

--- a/styles.css
+++ b/styles.css
@@ -742,151 +742,13 @@ padding-left: 20%;
 
 /* for the reviews section  */
 
-.carousel-wrapper {
-    height: 800px;
-    width: 600px;
-    position: relative;
-    display: block;
-    margin: 50px auto;
-    border: 2px solid var(--peru);
+.centered img {
+    align-items: center;
+    margin-top: 5%;
+    margin-left: 20%;
 }
 
-.carousel-item {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 25px 50px;
-    opacity: 1;
-    transition: all .5s ease-in-out;
-}
 
-.arrow {
-    border: solid var(--peru);
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 12px;
-}
-
-.arrow-prev {
-    left: -100px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%) rotate(135deg);
-}
-
-.arrow-next {
-    right: -100px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%) rotate(-45deg);
-}
-
-[id^= "item"] {
-    display: none;
-}
-
-.item-1 {
-    z-index: 2;
-    opacity: 1;
-    background-image: url(images/review.png);
-    background-repeat: no-repeat;
-}
-
-.item-2 {
-    background: url(images/review1.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-}
-
-.item-3 {
-    background: url(images/review2.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-}
-
-.item-4 {
-    background: url(images/review3.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-
-}
-
-.item-5 {
-    background: url(images/review4.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-
-}
-
-.item-6 {
-    background: url(images/review5.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-
-}
-
-.item-7 {
-    background: url(images/review6.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-
-}
-
-.item-8 {
-    background: url(images/review7.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-
-}
-
-.item-9 {
-    background: url(images/review8.png);
-    object-fit: contain;
-    background-repeat: no-repeat;
-
-}
-
-*:target ~ .item-1 {
-    opacity: 0;
-}
-
-#item-1:target ~ .item-1 {
-    opacity: 1;
-}
-
-#item-2:target ~ .item-2, #item-3:target ~ .item-3 {
-    z-index: 3;
-}
-
-#item3:target ~ .item-3, #item-4:target ~ .item-4 {
-    z-index: 3;
-}
-
-#item4:target ~ .item-4, #item-5:target ~ .item-5 {
-    z-index: 3;
-}
-
-#item5:target ~ .item-5, #item-6:target ~ .item-6 {
-    z-index: 3;
-}
-
-#item-6:target ~ .item-6, #item-7:target ~ .item-7 {
-    z-index: 3;
-}
-
-#item7:target ~ .item-7, #item-8:target ~ .item-8 {
-    z-index: 3;
-}
-
-#item8:target ~ .item-8, #item-9:target ~ .item-9 {
-    z-index: 3;
-}
-
-#item9:target ~ .item-9, #item-1:target ~ .item-1 {
-    z-index: 3;
-}
 
 
 .footer {
