--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,7 @@ section {
     letter-spacing: .5rem;
 }
 
+
 .header {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -229,6 +230,7 @@ section {
     padding: 0;
     background: var(--black);
     z-index: 2000;
+
 }
 
 .home .slide {
@@ -260,7 +262,7 @@ section {
 }
 
 .home .slide .content span {
-    font-size: 3rem;
+    font-size: 6rem;
     display: block;
     padding-bottom: .5rem;
     color: var(--light-white);
@@ -270,18 +272,40 @@ section {
 
 .home .slide .content h3 {
     text-align: center;
-    font-size: 6vw;
-    text-transform: uppercase;    
+    font-size: 9vw;
+    font-weight: 50;
     color: var(--white);
-    padding: 2rem 0;
+    padding: 8rem 0 0;
     line-height: 1;
     text-shadow: 0 .5rem 1rem rgba(0,0,0,0.7);
-    animation: fadeIn 2.4s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
+    animation: fadeIn 2.0s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
 }
 
-.home .slide .content .btn {
-    animation: fadeIn 3.4s cubic-bezier(0.54, 1.3, 0.63, 1.34) 3.0s backwards;
+.home .slide .content h4 {
+    text-align: center;
+    font-size: 6vw;
+    font-weight: 50;
+    color: var(--black);
+    padding: 8rem 0 2rem;
+    line-height: 1;
+    text-shadow: 0 .5rem 1rem rgba(0,0,0,0.7);
+    animation: fadeIn 2.9s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
 }
+
+
+.home .slide .content h5 {
+    text-align: center;
+    font-size: 4vw;
+    color: var(--black);
+    font-weight: 50;
+    padding: 1rem 0;
+    line-height: 1;
+    text-shadow: 0 .5rem 1rem rgba(0,0,0,0.7);
+    animation: fadeIn 3.7s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
+}
+
+
+
 
 .home .swiper-slide-active .content {
     display: inline-block;
@@ -869,12 +893,72 @@ padding-left: 20%;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* here is the part for the media queries  */
 @media(max-width:1400px) {
     
-    #reviews {
+    #reviews{
         display: none;
     }
+
+    .header > .nabar > .reviews-small {
+        display: none;
+    }
+
 }
 
 @media(max-width:1200px) {
@@ -939,6 +1023,7 @@ padding-left: 20%;
 
     .about .image {
         width: 50%;
+        margin: 0;
     }
 
 
