--- a/styles.css
+++ b/styles.css
@@ -108,16 +108,16 @@ html::-webkit-slider-thumb{
     visibility: hidden;
     opacity: 0;
     transition: 0.7s;
-  }
+}
   
-  .scrollTop.active {
+.scrollTop.active {
     bottom: 40px;
     visibility: visible;
     opacity: 1;
-  }
+}
   
   
-  @media (max-width: 780px) {
+@media (max-width: 780px) {
     .scrollTop {
       position: fixed;
       bottom: 500px;
@@ -141,7 +141,16 @@ html::-webkit-slider-thumb{
       visibility: visible;
       opacity: 1;
     }
-  }
+}
+
+
+.card {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: all 2.0s ease-in-out;
+  
+}
+
   
 
 section {
@@ -180,8 +189,8 @@ section {
 
 
 .header {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -197,8 +206,8 @@ section {
 
 .header .logo {
     color: var(--logo);
-    font-size: 3.5rem;
-    font-weight: bolder;
+    font-size: 6.0rem;
+    font-weight:100;
 }
 
 
@@ -209,7 +218,7 @@ section {
 }
 
 .header .navbar a:hover {
-    color: var(--basic-color);
+    color: var(--peru);
 }
 
 
@@ -313,11 +322,12 @@ section {
 
 .swiper-button-next,
 .swiper-button-prev {
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    background: var(--white);
+    height: 3.5rem;
+    width: 3.5rem;
+    line-height: 3.5rem;
+    background: none;
     color: var(--black);
+    opacity: 1;
 
 }
 
@@ -334,17 +344,16 @@ section {
 
 
 .about {
-    display: flex;
     align-items: center;
-    flex-wrap: wrap;
-    display: flex;
-    justify-content:center;
-    gap: 2rem;
-    padding-left: 0;
+    display: grid;
 }
 
 .about .image {
     width: 25%;
+    align-items: center;
+    margin-left: 32%;   
+    margin-top: 8%; 
+    margin-bottom: 5%;
 }
 
 .about-image {
@@ -352,14 +361,10 @@ section {
 }
 
 .about .image img {
-    text-align: center;
     width: 150%;
     border-radius: 50%;
 }
 
-.about .content {
-padding-left: 20%;
-}
 
 .about .content .title {
     font-size: 5rem;
@@ -372,6 +377,7 @@ padding-left: 20%;
 }
 .about .content p {
     font-size: 2rem;
+    color: var(--black);
 }
 
 .icons-container {
@@ -381,6 +387,10 @@ padding-left: 20%;
     flex-direction: row;
     position: relative;
     margin: 4rem auto;
+}
+
+.icons-container h3 {
+    color: var(--black);
 }
 
 
@@ -816,11 +826,14 @@ padding-left: 20%;
 
 
 .footer {
+    align-items: center;
     text-align: center;
 }
 
 .footer .icons-container {
     display: grid;
+    justify-content: center;
+    align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     gap: 2rem;
 }
@@ -843,14 +856,14 @@ padding-left: 20%;
 
 .footer .icons-container .icons h3{
     font-size: 2rem;
-    color: var(--light-black);
+    color: var(--black);
     padding: 1rem 0;
 }
 
 .footer .icons-container .icons p {
     line-height: 1.5rem;
     font-size: 1.55rem;
-    color: var(--light-black);
+    color: var(--black);
     text-transform: none;
 }
 
@@ -877,7 +890,7 @@ padding-left: 20%;
     margin-top: 3rem;
     border-top: var(--border);
     font-size: 2rem;
-    color: var(--light-black);
+    color: var(--black);
 }
 
 .footer .credit span {
@@ -949,7 +962,7 @@ padding-left: 20%;
 
 
 /* here is the part for the media queries  */
-@media(max-width:1400px) {
+@media(max-width:1500px) {
     
     #reviews{
         display: none;
@@ -959,14 +972,89 @@ padding-left: 20%;
         display: none;
     }
 
+
+    .food .slide img {
+        height: 16rem;
+        width: 18rem;
+        margin-bottom: 1rem;
+    }
+
 }
+
+
+@media(max-width:1320px) {
+    
+    #reviews{
+        display: none;
+    }
+
+    .header > .nabar > .reviews-small {
+        display: none;
+    }
+
+
+    .food .slide img {
+        height: 14rem;
+        width: 15rem;
+        margin-bottom: 1rem;
+    }
+
+}
+
 
 @media(max-width:1200px) {
     section {
         padding: 3rem 5%;
     }
 
+    .home .slide .content h3 {
+        font-size: 12vw;
+        padding: 8rem 0 10rem;
+        line-height: 1;
+
+    }
+    
+    .home .slide .content h4 {
+        font-size: 9vw;
+        margin: 8rem 0 0;
+        line-height: 1;
+    }
+    
+    
+    .home .slide .content h5 {
+        font-size: 8vw;
+        padding: 1rem 0;
+        line-height: 1;
+    }
+    
+
 }
+
+
+
+
+
+
+
+@media(max-width:990px) {
+    
+    #reviews{
+        display: none;
+    }
+
+    .header > .nabar > .reviews-small {
+        display: none;
+    }
+
+
+    .food .slide img {
+        height: 20rem;
+        width: 29rem;
+        margin-bottom: 1rem;
+    }
+
+}
+
 
 
 
@@ -1022,10 +1110,13 @@ padding-left: 20%;
     }
 
     .about .image {
-        width: 50%;
-        margin: 0;
+        width: 30%;
+        align-items: center;
+        margin-left: 32%;   
+        margin-top: 8%; 
+        margin-bottom: 5%;
     }
-
+    
 
     #menu-btn {
         display: inline-block;
@@ -1069,6 +1160,26 @@ padding-left: 20%;
 
 }
 
+@media(max-width:700px) {
+    
+    #reviews{
+        display: none;
+    }
+
+    .header > .nabar > .reviews-small {
+        display: none;
+    }
+
+
+    .food .slide img {
+        height: 30rem;
+        width: 40rem;
+        margin-bottom: 1rem;
+    }
+
+}
+
+
 
 @media(max-width:450px) {
 
@@ -1078,6 +1189,84 @@ padding-left: 20%;
 
     .home .slide .content h3 {
         font-size: 6rem;
+    }
+
+    #reviews{
+        display: none;
+    }
+
+    .header > .nabar > .reviews-small {
+        display: none;
+    }
+
+
+    .food .slide img {
+        height: 25rem;
+        width: 35rem;
+        margin-bottom: 1rem;
+    }
+
+
+    .about .image {
+        width: 40%;
+        align-items: center;
+        margin-left: 20%;   
+        margin-top: 8%; 
+        margin-bottom: 5%;
+    }
+}
+
+
+
+@media(max-width:350px) {
+
+    html {
+        font-size: 50%;
+    }
+
+    .home .slide .content h3 {
+        font-size: 6rem;
+    }
+
+    #reviews{
+        display: none;
+    }
+
+    .header > .nabar > .reviews-small {
+        display: none;
+    }
+
+
+    .food .slide img {
+        height: 20rem;
+        width: 30rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media(max-width:300px) {
+
+    html {
+        font-size: 50%;
+    }
+
+    .home .slide .content h3 {
+        font-size: 6rem;
+    }
+
+    #reviews{
+        display: none;
+    }
+
+    .header > .nabar > .reviews-small {
+        display: none;
+    }
+
+
+    .food .slide img {
+        height: 15rem;
+        width: 25rem;
+        margin-bottom: 1rem;
     }
 }
 
