Finish up Web writing for the packages

--- a/styles.css
+++ b/styles.css
@@ -430,6 +430,7 @@ section {
     font-weight: 100;
 }
 
+
 .food .slide {
     text-align: center;
     padding: 3rem 2rem;
@@ -466,9 +467,15 @@ section {
     color:var(--black);
 }
 
+.food .slide h5 {
+    font-weight: 100;  
+    font-size: 3.5rem;
+    color: var(--peru);
+}
+
 .food .slide .price {
     font-size: 2.5rem;
-    color: var(--peru);
+    color: var(--black);
 }
 
 
@@ -488,8 +495,8 @@ section {
 .food-preview-container .food-preview {
     text-align: center;
     background: var(--white);
-    padding: 3rem 2rem;
-    border-radius: .5rem;
+    margin: 3rem 2rem;
+    border-radius: .9rem;
     display: none;
     width: 35rem;
 }
@@ -501,14 +508,16 @@ section {
 }
 
 .food-preview-container .food-preview img {
-    height: 15rem;
+    margin-top: 2rem;
+    height: 7rem;
     margin-bottom: .2rem;
 }
 
 .food-preview-container .food-preview h3 {
     padding: .2rem 0;
     font-size: 2.5rem;
-    color: var(--black);
+    color: var(--peru);
+    font-weight: 100;
 }
 
 .food-preview-container .food-preview .stars {
@@ -516,22 +525,36 @@ section {
 }
 
 .food-preview-container .food-preview .stars i {
-    font-size: 1.7rem;
-    color: var(--peru);
+    font-size: 1.0rem;
+    color: var(--logo);
 }
 
 
-.food-preview-container .food-preview p {
-    font-size: 1.6rem;
-    color: var(--light-black);
-    padding: .2rem 0;
-    line-height: 2;
+.food-preview-container .food-preview ul {
+    color: var(--black);
+    margin-top: 2rem;
+    margin-bottom: none;
+    margin-left: 30%;
+    text-align: left;
+}
+
+.food-preview-container .food-preview ul li {
+    color: var(--black);
+    line-height: 2rem;
+    font-size: 2rem;
+    left: -6rem;
+}
+
+.food-preview-container .food-preview ul li span {
+    position: relative;
+    left: 0rem;
+    color: var(--black);
 }
 
 .food-preview-container .food-preview .price {
-    font-size: 2.5rem;
-    color: var(--black);
-    margin-bottom: .5rem;
+    font-size: 1.5rem;
+    color: var(--white);
+    margin-bottom: 1.5rem;
 }
 
 #close-preview {
