--- a/styles.css
+++ b/styles.css
@@ -271,14 +271,6 @@ section {
     display: none;
 }
 
-.home .slide .content span {
-    font-size: 6rem;
-    display: block;
-    padding-bottom: .5rem;
-    color: var(--light-white);
-    text-align: center;
-    animation: fadeIn 0.4s cubic-bezier(0.54, 1.3, 0.63, 1.34) .7s backwards;
-}
 
 .home .slide .content h3 {
     text-align: center;
@@ -288,7 +280,7 @@ section {
     padding: 8rem 0 0;
     line-height: 1;
     text-shadow: 0 .5rem 1rem rgba(0,0,0,0.7);
-    animation: fadeIn 2.0s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
+    animation: fadeIn 3.2s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.2s backwards;
 }
 
 .home .slide .content h4 {
@@ -299,7 +291,7 @@ section {
     padding: 8rem 0 2rem;
     line-height: 1;
     text-shadow: 0 .5rem 1rem rgba(0,0,0,0.7);
-    animation: fadeIn 2.9s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
+    animation: fadeIn 3.7s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
 }
 
 
@@ -311,7 +303,7 @@ section {
     padding: 1rem 0;
     line-height: 1;
     text-shadow: 0 .5rem 1rem rgba(0,0,0,0.7);
-    animation: fadeIn 3.7s cubic-bezier(0.54, 1.3, 0.63, 1.34) 2.7s backwards;
+    animation: fadeIn 4.2s cubic-bezier(0.54, 1.3, 0.63, 1.34) 3.2s backwards;
 }
 
 
@@ -519,6 +511,14 @@ section {
     color: var(--peru);
     font-weight: 100;
 }
+
+.food-preview-container .food-preview h4 {
+    padding: .2rem 0;
+    font-size: 1.5rem;
+    color: var(--black);
+    font-weight: 100;
+}
+
 
 .food-preview-container .food-preview .stars {
     margin-top: .2rem;
