--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ html::-webkit-slider-thumb{
     background-position: center;
     z-index: 1000;
     background-image: 50%;
+    visibility: hidden;
 }
 .cta:hover {
     width: 78px;
