remove the background color

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,9 @@
 
 * {
     font-family: 'Italianno', cursive;
-    /* background-color: var(--color-bg); */
+    color: var(--basic-color);
+    background-color: transparent;
+    background: transparent;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
